[package]
name = "example-jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
# axum-extra = { version =  "0.7", features = ["typed-header"] }
jsonwebtoken = "8.3.0"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hyper = "0.14.27"
tower = "0.4.13"
